--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
     },
     "dependencies": {
         "botbuilder": "^4.20.0",
+        "botbuilder-dialogs": "^4.22.0",
+        "langchain": "^0.1.9",
         "restify": "^10.0.0"
     },
     "devDependencies": {
-        "@types/restify": "^8.5.5",
         "@types/node": "^14.0.0",
+        "@types/restify": "^8.5.5",
         "env-cmd": "^10.1.0",
-        "ts-node": "^10.4.0",
-        "typescript": "^4.4.4",
         "nodemon": "^2.0.7",
-        "shx": "^0.3.3"
+        "shx": "^0.3.3",
+        "ts-node": "^10.4.0",
+        "typescript": "^4.4.4"
     }
 }
