--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "botbuilder": "^4.20.0",
         "botbuilder-dialogs": "^4.22.0",
+        "cheerio": "^1.0.0-rc.12",
         "langchain": "^0.1.9",
         "restify": "^10.0.0"
     },
